[package]
name = "shrs_z"
version = "0.0.6"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Daniel Liu <mr.picklepinosaur@gmail.com>"]
description = "shrs port of z"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["shrs", "shell", "posix", "unix"]
readme = "README.md"
repository = "https://github.com/MrPicklePinosaur/shrs_z"

[features]

[dependencies]
shrs = { version = "0.0.6" }

clap = { version = "4.1", features = ["derive"] }
chrono = { version = "0.4" }
regex = { version = "1.10" }
